[package]
name = "keyserver"
version = "0.2.1"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"
description = "Cash:web Keyserver is a Bitcoin public key and metadata registry"

[features]
monitoring = ["prometheus", "prometheus-static-metric"]

[dependencies]
async_zmq = "0.3"
base64 = "0.13"
bitcoincash-addr = "0.5"
bytes = "1"
cashweb = "0.1.0-alpha.10"
clap = { version = "2", features = ["yaml"] }
config = "0.10"
dashmap = "4"
dirs = "3"
futures = "0.3"
hex = "0.4"
http = "0.2"
hyper = "0.14"
hyper-tls = "0.5"
lazy_static = "1"
prost = "0.7"
prometheus = { version = "0.11", optional = true }
prometheus-static-metric = { version = "0.5", optional = true }
ring = "0.16"
rocksdb = "0.15"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.2"
tower-service = "0.3"
url = "2"
warp = "0.3"

[dependencies.tokio]
version = "1"
features = ["macros", "rt", "rt-multi-thread", "sync", "time"]

[build-dependencies]
prost-build = "0.7"

[patch.crates-io]
cashweb = { git = "https://github.com/quebin31/cashweb-rs", branch = "bump-to-tokio-1.0" }
