[package]
name = "keyserver"
version = "0.2.1"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"
description = "Cash:web Keyserver is a Bitcoin public key and metadata registry"

[features]
monitoring = ["prometheus", "prometheus-static-metric"]

[dependencies]
async_zmq = "0.3.2"
base64 = "0.13.0"
bitcoincash-addr = "0.5.2"
bytes = "1.0.1"
cashweb = "0.1.0-alpha.9"
clap = { version = "2.33.3", features = ["yaml"] }
config = "0.10.1"
dashmap = "4.0.2"
dirs = "3.0.1"
futures = "0.3.12"
hex = "0.4.2"
http = "0.2.3"
hyper = "0.14.2"
hyper-tls = "0.5.0"
lazy_static = "1.4.0"
prost = "0.7.0"
prometheus = { version = "0.11.0", optional = true }
prometheus-static-metric = { version = "0.5.1", optional = true }
ring = "0.16.19"
rocksdb = "0.15.0"
serde = { version = "1.0.123", features = ["derive"] }
thiserror = "1.0.23"
tracing = "0.1.22"
tracing-subscriber = "0.2.15"
tower-service = "0.3.1"
url = "2.2.0"
warp = "0.3.0"

[dependencies.tokio]
version = "1.1.1"
features = ["macros", "rt", "rt-multi-thread", "sync", "time"]

[build-dependencies]
prost-build = "0.7.0"

[patch.crates-io]
cashweb = { git = "https://github.com/quebin31/cashweb-rs", branch = "bump-to-tokio-1.0" }
